# pso-ann

./: .gitignore  Makefile  README.md  ann.py  example_mnist.py  pso.py  pyproject.toml  requirements.txt  test_pso.py
.github/workflows/: main.yml
examples/animation/: README.md  animation.py  optim_functions.py  pyproject.toml
examples/gym/: README.md  main_acrobot.py  main_cartpole.py  main_mountain-car-continuous.py  main_mountain-car.py  main_pendulum.py  pyproject.toml
examples/mnist/: README.md  mnist.py  pyproject.toml
examples/neurofish/: README.md  best.pickle  dummy.pickle  main.py  pyproject.toml  train.py
examples/neurofish/neurofish/: aquarium.py  chips.py  fish.py  typing.py
examples/neurofish/tests/: test_fish.py
psoann/: ann.py  pso.py
tests/: test_ann.py  test_pso.py
