[tool.poetry]
name = "pso-ann"
version = "0.1.0"
description = "Particle Swarm Optimization (PSO) to optimize Artificial Neural Network (ANN)"
authors = ["Quentin Suire <dev@quentinsuire.com>"]
readme = "README.md"
packages = [{include = "pso_ann"}]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.9.2"
scikit-learn = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
