[tool.poetry]
name = "psoann"
version = "0.1.0"
description = "Particle Swarm Optimization (PSO) to optimize Artificial Neural Network (ANN)"
authors = ["Quentin Suire <dev@quentinsuire.com>"]
readme = "README.md"
packages = [{include = "psoann"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scipy = "^1.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
