[tool.poetry]
name = "gym"
version = "0.1.0"
description = "Examples with Gym"
authors = ["Quentin Suire <dev@quentinsuire.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psoann = {path = "../../../pso-ann", develop = true}
scikit-learn = "^1.1.2"
gym = {extras = ["classic_control"], version = "^0.26.2"}
pygame = "^2.1.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
